--- a/index.html
+++ b/index.html
@@ -54,19 +54,16 @@
 
 <body class="" onchange="formInteraction();" onkeypress="formInteraction();" onkeyup="formInteraction();">
     <main>
-        <form name="formCloud" class="formCloud col s12" id="formCloud" action="javascript:void(0);" onsubmit="javascript:void(0);">
+        <form name="formCloud" class="formCloud" id="formCloud" action="javascript:void(0);" onsubmit="javascript:void(0);" autocomplete="off">
             <header class="row graD page-topbar">
                 <div class="col s12 m12 l12 text-white inline" style="margin-bottom: 10px;">
+                    <div class="logo-wrapper noselect">
+                        <img src="./img/logo.png" class="brand-logo" alt="Passcloud brand logo.">
+                        <span class="logo-text">Passcloud</span>
+                    </div>
                     <a href="#" data-activates="slide-out" class="menuButton button-collapse sidebar-collapse btn-floating btn-medium waves-effect waves-light accent-2 card gradient-45deg-amber-amber hide-on-large-only">
                         <i class="material-icons">menu</i>
                     </a>
-                    <!-- <a href="#" data-activates="slide-out" class="menuButton button-collapse circle hide-on-large-only white-text">
-                        <i class="material-icons white-text">menu</i>
-                    </a> -->
-                    <div class="logo-wrapper noselect hide-on-large-only">
-                            <img src="./img/logo.png" class="brand-logo" alt="Passcloud brand logo.">
-                            <span class="logo-text">Passcloud</span>
-                    </div>
                 </div>
                 <div class="input-field masterPassword col s12 m12 l12 text-white inline">
                     <input type="password" name="masterPass" value="" id="masterPass" class="masterPass" title="Choose a strong Master Password." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="1" /><button class="clearInput"
