--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
                     <label>Type:</label>
                 </div>
                 <div class="col s6 m3 l3">
+                    <!-- <div class="input-field col s12">
+                        <select multiple name="multiple" id="multiple" onchange="formInteraction();" onkeypress="formInteraction();" tabindex="8">
+                            <option value="unique" selected>Unique</option>
+                            <option value="alpha" selected>Alpha</option>
+                            <option value="numeric" selected>Numeric</option>
+                            <option value="ambiguous" selected>Similar</option>
+                            <option value="special" selected>Special</option>
+                            <option value="extended">Extended</option>
+                            <option value="yearly">Yearly</option>
+                        </select>
+                        <label>Options:</label>
+                    </div> -->
                     <ul class="collapsible collapsible-accordion z-depth-0" id="optionsMenu" data-open="no">
                         <li>
                             <a class="collapsible-header">OPTIONS: <span class="pusharrowsright" id="optionsArrow">&#8675;</span></a>
@@ -177,7 +189,6 @@
                         </li>
                     </ul>
                 </div>
-                <!--<div style="clear:both;"></div>-->
             </div>
             <div class="row">
                 <div class="input-field col s12 m12 l12">
